objects/Customer_Outing__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Outings</relationshipLabel>
        <relationshipName>Customer_Outings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Interest__c</fullName>
        <label>Customer Interest</label>
        <referenceTo>Customer_Interest__c</referenceTo>
        <relationshipLabel>Customer Outings</relationshipLabel>
        <relationshipName>Customer_Outings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <label>Time Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Customer Outing</label>
    <nameField>
        <displayFormat>COUT-{000}</displayFormat>
        <label>Customer Outing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Outings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>